feat(Server): Initial authorisation
Initial pass at integrating authorisation in the server

Jira: MSG-158